Wrote final changes to messaging. Still not working with getUID from SharedPref